finalized styling - fixed extra gap between cards in projects - adjusted size of project columns (2 -> 3) - adjusted size of right dashboard cards - adjusted size of profile images - changed icon color to white

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+:root {
+    --subtext-color: rgb(114, 112, 112);
+    --main-blue: #4464AD;
+    --box-shadow-color: rgb(153, 152, 152);
+}
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -5,18 +11,12 @@
 }
 
 body {
-    background-color: beige;
-    font-family: "Poppins";
+    background-color: white;
+    font-family: "Poppins", sans-serif;
 }
 
 li {
     list-style: none;
-    margin: 5px;
-}
-
-a {
-    text-decoration: none;
-    color: white;
 }
 
 h1 {
@@ -24,13 +24,17 @@ h1 {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    font-size: 1.5em;
+    font-size: 1.5rem;
+}
+
+h4 {
+    margin-bottom: 10px;
 }
 
 .profile-images {
-    width: 50px;
+    width: 40px;
     height: auto;
-    border: 2px solid #4464AD;
+    border: 2px solid var(--main-blue);
     padding: 5px;
     border-radius: 50%;
     margin-right: 20px;
@@ -38,7 +42,7 @@ h1 {
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 5fr;
 }
 
 .icon {
@@ -47,59 +51,45 @@ h1 {
     margin-right: 20px;
 }
 
+.filter-white {
+    filter: invert(100%) brightness(100%) contrast(100%);
+}
+
 /* HEADER */
 
 .header {
     background-color: white;
     grid-column: 2 / 3;
     padding-top: 10px;
-    box-shadow: 0 6px 3px -3px rgb(153, 152, 152);
+    box-shadow: 0 6px 3px -3px var(--box-shadow-color);
     z-index: 1;
 }
 
-.top-header {
+.top-header,
+.bottom-header {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    margin-left: 50px;
+    margin: 0 50px;
     align-items: center;
+    margin-bottom: 10px;
 }
 
-.search-bar {
-    grid-column: 1 / 2;
+.search-bar, .top-right ul {
     display: flex;
     align-items: center;
 }
 
-.top-right {
-    margin-left: 50px;
-    
+.top-right ul {
+    justify-content: center;
 }
 
 input {
     height: 30px;
-    border-radius: 10px;
+    border-radius: 15px;
     background-color: rgb(221, 221, 221);
     border: none;
     width: 90%;
     padding-inline-start: 10px;
-}
-
-.bottom-header {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 0 50px;
-}
-
-.bottom-left,
-.bottom-right {
-    display: flex;
-    align-items: center;
-    /* flex-wrap: wrap; */
-}
-
-.top-right ul {
-    display: flex;
 }
 
 .bottom-right ul {
@@ -109,22 +99,18 @@ input {
 
 button {
     padding: 10px 30px;
-    background-color: #4464AD;
+    background-color: var(--main-blue);
     border: none;
     border-radius: 20px;
     color: white;
     font-weight: bold;
 }
 
-.top-right-icons {
-    align-items: center;
-}
-
 /* SIDEBAR */
 
 .sidebar {
     grid-row: 1 / 3;
-    background-color: #4464AD;
+    background-color: var(--main-blue);
     color: white;
 }
 
@@ -152,47 +138,37 @@ button {
 
 /* DASHBOARD */
 
-.left-dashboard-heading {
-    grid-column: 1 / 2;
-    grid-row: 1;
-}
-
 .dashboard {
     background-color: #D6E0EF;
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    gap: 20px;
+    grid-template-columns: 3fr 1fr;
     padding: 20px;
 }
 
+/* LEFT DASHBOARD */
+
 .left-dashboard {
-    margin-top: 10px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
-    grid-column: 1 / 2;
 }
 
 .dashboard .card {
     background-color: #FFFFFF;
-    color: black;
-    text-align: center;
-    /* height: 175px; */
-    height: auto;
-    box-shadow: 2px 5px 4px -2px rgb(153, 152, 152);
-    border-left: 7px solid #eea155;
+    height: 180px;
+    box-shadow: 2px 5px 4px -2px var(--box-shadow-color);
+    /* border-left: 7px solid #eea155; */
+    border-left: 7px solid var(--main-blue);
     border-radius: 10px;
-    padding: 10px 17px;
+    padding: 10px 15px;
 }
 
 .sharing-icons {
     display: flex;
     justify-content: flex-end;
     flex-wrap: wrap;
-    margin-top: 5px;
-}
-
-.sharing-icons li {
-    flex-shrink: 1;
+    margin-top: 20px;
 }
 
 .dashboard p {
@@ -202,7 +178,7 @@ button {
 }
 
 .card p {
-    color: rgb(114, 112, 112);
+    color: var(--subtext-color);
     font-weight: normal;
     font-size: 13px;
 }
@@ -217,34 +193,22 @@ button {
 /* RIGHT DASHBOARD */
 
 .right-dashboard {
-    margin-top: -20px;
     grid-column: 2;
-}
-
-.right-top-dashboard-heading,
-.right-dashboard>* {
-    margin-left: 20px;
-}
-
-.right-top-dashboard-heading,
-.right-bottom-dashboard-heading {
-    margin-bottom: 7px;
+    grid-row: 1 / 3;
 }
 
 .right-card {
     background-color: #FFFFFF;
     text-align: center;
-    /* height: 20px; */
     height: auto;
-    box-shadow: 2px 5px 4px -2px rgb(153, 152, 152);
+    box-shadow: 2px 5px 4px -2px var(--box-shadow-color);
     border-radius: 10px;
-    padding: 25px;
-    margin-bottom: 20px;
+    padding: 15px;
+    margin-bottom: 10px;
 }
 
 .right-card p {
-    color: rgb(114, 112, 112);
-    font-weight: normal;
+    color: var(--subtext-color);
     font-size: .6rem;
 }
 
@@ -264,7 +228,7 @@ hr {
     display: flex;
     justify-content: start;
     align-items: center;
-    margin-bottom: 10px;
+    margin-bottom: 9px;
 }
 
 .people li {
